Fixing footer overlap issue

--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -1,13 +1,3 @@
-.book-footer{
-    position: absolute;
-    bottom: 0;
-    margin-bottom: 10px;
-}
-
-// img[alt~="bg"] {
-//     display: none;
-//     }
-
 img[alt*="right"] {
   float: right;
   margin-left: 2em;
